implementação GET ALL, GET ID e DELETE